Trazendo informações do banco de dados para a View

--- a/agenda_pacientes/templates/agenda_pacientes/index.html
+++ b/agenda_pacientes/templates/agenda_pacientes/index.html
@@ -1,3 +1,5 @@
-<h1>Agenda Avalia</h1>
+{% extends "agenda_pacientes/base.html" %}
 
-<p>Teste...</p>
+{% block content %}
+    <p>Bem vindo a agenda de pacientes da Clínica Avalia</p>
+{% endblock content %}
