Criado o formulário de cadastro de novos pacientes

--- a/agenda_pacientes/templates/agenda_pacientes/base.html
+++ b/agenda_pacientes/templates/agenda_pacientes/base.html
@@ -1,4 +1,5 @@
-<a href="{% url 'index' %}"><h1>Agenda Avalia</h1></a>
+<a href="{% url 'index' %}">Agenda Avalia</a> -
+<a href="{% url 'pacientes' %}">Pacientes</a>
 
 {% block content %}{% endblock content %}
 
