Remodelando o app para a versão final

--- a/agenda_pacientes/templates/agenda_pacientes/novo_paciente.html
+++ b/agenda_pacientes/templates/agenda_pacientes/novo_paciente.html
@@ -1,6 +1,7 @@
 {% extends "agenda_pacientes/base.html" %}
 
 {% block content %}
+    <p>Adicione um novo Paciente: </p>
 
     <form action="{% url 'novo_paciente' %}" method='post'>
         {% csrf_token %}
