--- a/agenda_pacientes/templates/agenda_pacientes/base.html
+++ b/agenda_pacientes/templates/agenda_pacientes/base.html
@@ -1,5 +1,12 @@
-<a href="{% url 'index' %}">Agenda Avalia</a> -
-<a href="{% url 'pacientes' %}">Pacientes</a>
+<p>
+    <a href="{% url 'index' %}">Agenda Avalia</a> -
+    <a href="{% url 'pacientes' %}">Pacientes</a>
+    {% if user.is_authenticated %}
+        Olá, {{ user.username }}
+        <a href="{% url 'logout' %}">Sair</a>
+    {% else %}
+        <a href="{% url 'login' %}">Entrar</a>
+    {% endif %}
+</p>
 
 {% block content %}{% endblock content %}
-
