--- a/agenda_pacientes/templates/agenda_pacientes/editar_consulta.html
+++ b/agenda_pacientes/templates/agenda_pacientes/editar_consulta.html
@@ -1,15 +1,20 @@
 {% extends "agenda_pacientes/base.html" %}
+{% load bootstrap3 %}
+
+{% block header %}
+    <h1><a href="{% url 'consultas' paciente.id %}">{{ paciente }}</a></h1>
+{% endblock header %}
 
 {% block content %}
 
-<p><a href="{% url 'consultas' paciente.id %}">{{ paciente }}</a></p>
+<h3>Editar horário e data da consulta:</h3>
 
-<p>Editar horário e data da consulta:</p>
-
-<form action="{% url 'editar_consulta' consulta.id %}" method="post">
+<form action="{% url 'editar_consulta' consulta.id %}" method="post" class="form">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button name="submit">Salvar</button>
+    {% bootstrap_form form %}
+    {% buttons %}
+        <button name="submit" class="btn btn-primary">Salvar</button>
+    {% endbuttons %}
 </form>
 
 {% endblock content %}
