--- a/agenda_pacientes/templates/agenda_pacientes/index.html
+++ b/agenda_pacientes/templates/agenda_pacientes/index.html
@@ -7,7 +7,17 @@
 {% endblock header %}
 
 {% block content %}
-    <h2>
-        <a href="{% url 'register' %}">Crie uma conta</a> para utilizar o sistema de agendamento ou faça login para começar a utilizar.
-    </h2>
+
+    {% if user.is_authenticated %}
+
+        <!-- Aqui vai ficar a lógica para puxar a agenda de todos usuários -->
+
+    {% else %}
+
+        <h2>
+            <a href="{% url 'register' %}">Crie uma conta</a> para utilizar o sistema de agendamento ou faça login para começar a utilizar.
+        </h2>
+
+    {% endif %}
+    
 {% endblock content %}
