--- a/agenda_pacientes/templates/agenda_pacientes/novo_paciente.html
+++ b/agenda_pacientes/templates/agenda_pacientes/novo_paciente.html
@@ -1,12 +1,18 @@
 {% extends "agenda_pacientes/base.html" %}
+{% load bootstrap3 %}
+
+{% block header %}
+    <h2>Adicione um novo Paciente: </h2>
+{% endblock header %}
 
 {% block content %}
-    <p>Adicione um novo Paciente: </p>
 
-    <form action="{% url 'novo_paciente' %}" method='post'>
+    <form action="{% url 'novo_paciente' %}" method='post' class="form">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button name="submit">Adicionar</button>
+        {% bootstrap_form form %}
+        {% buttons %}
+        <button name="submit" class="btn btn-primary">Adicionar</button>
+        {% endbuttons %}
     </form>
 
 {% endblock content %}
