--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,12 +1,23 @@
 {% extends "agenda_pacientes/base.html" %}
+{% load bootstrap3 %}
+
+{% block header %}
+    <h1>Criar conta</h1>
+{% endblock header %}
 
 {% block content %}
-
-    <form action="{% url 'register' %}" method="post">
+    {% if form.errors %}
+        <p class="aviso-erro" style="color: red;">* O nome do usuário não deve conter caracteres especiais</p>
+        <p class="aviso-erro" style="color: red;">* A senha deve ter mais de 8 digitos, letras, números, caracteres especiais e não pode conter o nome de usuário</p>
+        <p class="aviso-erro" style="color: red;">* As senhas digitadas precisam estar iguais</p>
+    {% endif %}
+    <form action="{% url 'register' %}" method="post" class="ul-none form">
         {% csrf_token %}
-        {{ form.as_p }}
+        {% bootstrap_form form %}
 
-        <button name="submit">Registrar</button>
+        {% buttons %}
+            <button name="submit" class="btn btn-primary">Registrar</button>
+        {% endbuttons %}
         <input type="hidden" name="next" value="{% url 'index' %}"/>
     </form>
 
