--- a/agenda_pacientes/templates/agenda_pacientes/base.html
+++ b/agenda_pacientes/templates/agenda_pacientes/base.html
@@ -5,6 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
 
         <title>Agenda Avalia</title>
 
@@ -20,6 +21,13 @@
                 display: none;
             }
 
+            .card-body {
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+                border-radius: 8px;
+                padding: 12px;
+                margin-bottom: 24px;
+            }
+
 
         </style>
 
@@ -29,8 +37,10 @@
         <nav class="nav navbar-default navbar-static-top">
             <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapse" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
-        
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="{% url 'index' %}">Agenda Avalia</a>
                 </div>
